5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1594_2043.log
== TEST (2019-03-19 16:37:36) 
-- CODE:
expressao= 1+2+3+4//4
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(media,2))
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:37:49) 
-- CODE:
media= 1+2+3+4//4
print(round(media,2))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:37:51) 
-- CODE:
media= 1+2+3+4//4
print(round(media,2))
-- EXECUTION TIME:
0.142375
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:38:06) 
-- CODE:
media= 1+2+3+4/4
print(round(media,2))
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:38:08) 
-- CODE:
media= 1+2+3+4/4
print(round(media,2))
-- EXECUTION TIME:
0.219556
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:39:07) 
-- CODE:
media= 0*1+0*2+9*3+10*4/4
print(round(media,2))
-- OUTPUT:
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:39:35) 
-- CODE:
media= 0*1+0*2+9*3+10*4/10
print(round(media,2))
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:40:24) 
-- CODE:
media= 0+0+(9*3)+(10*4)/10
print(round(media,2))
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:40:31) 
-- CODE:
media= 0+0+(9*3)+(10*4)//10
print(round(media,2))
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:40:33) 
-- CODE:
media= 0+0+(9*3)+(10*4)//10
print(round(media,2))
-- EXECUTION TIME:
0.149015
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
31
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
31
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:40:34) 
-- CODE:
media= 0+0+(9*3)+(10*4)//10
print(round(media,2))
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:41:36) 
-- CODE:
media= 0+0+(9*3)+(10*4)//14
print(round(media,2))
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:41:45) 
-- CODE:
media= 0+0+(9*3)+(10*4)
print(round(media,2))
-- OUTPUT:
67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:48:49) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nota4
NameError: name 'nota4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:50:30) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(round(nota1+nota2+nota3+nota4/10,2))
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:50:33) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(round(nota1+nota2+nota3+nota4/10,2))
-- EXECUTION TIME:
0.115304
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
31.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
31.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
31.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:50:42) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(round(nota1+nota2+nota3+nota4/10,2))
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:51:12) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(round(nota1+nota2+nota3+nota4/10))
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:51:42) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(nota1+nota2+nota3+nota4/10))
-- ERROR:
File "XXXX", line 5
    print(nota1+nota2+nota3+nota4/10))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:51:45) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(nota1+nota2+nota3+nota4/10)
-- EXECUTION TIME:
0.174562
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
31.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
31.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
31.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:51:46) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(nota1+nota2+nota3+nota4/10)
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:51:47) 
-- CODE:
nota1=0*1
nota2=0*2
nota3=9*3
nota4=10*4
print(nota1+nota2+nota3+nota4/10)
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:54:26) 
-- CODE:
nota1=0.0*1
nota2=0.0*2
nota3=9.0*3
nota4=10.0*4
print(nota1+nota2+nota3+nota4/10)
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:54:50) 
-- CODE:
nota1=0.0*1
nota2=0.0*2
nota3=9.0*3
nota4=10.0*4
print(nota1+nota2+nota3+nota4/100)
-- OUTPUT:
27.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:16) 
-- CODE:
nota1=1*1
nota2=1*2
nota3=9.0*3
nota4=10.0*4
print(nota1+nota2+nota3+nota4/10)
-- OUTPUT:
34.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:00:10) 
-- CODE:

nota3=9.0*3
nota4=10.0*4
print(nota3+nota4/10)
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:00:34) 
-- CODE:

nota3=(9.0)*3
nota4=(10.0)*4
print(nota3+nota4/10)
-- OUTPUT:
31.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:00:59) 
-- CODE:

nota3=(9.0)*3
nota4=(10.0)*4
print((nota3+nota4)/10)
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:01:03) 
-- CODE:

nota3=(9.0)*3
nota4=(10.0)*4
print((nota3+nota4)/10)
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:01:04) 
-- CODE:

nota3=(9.0)*3
nota4=(10.0)*4
print((nota3+nota4)/10)
-- EXECUTION TIME:
0.138709
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:01:06) 
-- CODE:

nota3=(9.0)*3
nota4=(10.0)*4
print((nota3+nota4)/10)
-- EXECUTION TIME:
0.132304
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:02:34) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:02:36) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- EXECUTION TIME:
0.138066
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:03:02) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:03:36) 
-- CODE:
nota1=(0.00)*1
nota2=(0.00)*2
nota3=(9.00)*3
nota4=(10.00)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:03:40) 
-- CODE:
nota1=(0.00)*1
nota2=(0.00)*2
nota3=(9.00)*3
nota4=(10.00)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- EXECUTION TIME:
0.122015
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:03:53) 
-- CODE:
nota1=(0.000)*1
nota2=(0.000)*2
nota3=(9.000)*3
nota4=(10.000)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:03:54) 
-- CODE:
nota1=(0.000)*1
nota2=(0.000)*2
nota3=(9.000)*3
nota4=(10.000)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- EXECUTION TIME:
0.134359
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.7
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:05:58) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)//10,2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:06:00) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)//10,2))
-- EXECUTION TIME:
0.229088
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
6.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
6.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:06:00) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)//10,2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:06:09) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)/10,2))
-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:07:45) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print(round((nota1+nota2+nota3+nota4)//10))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:08:01) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print((nota1+nota2+nota3+nota4)//10)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:16:50) 
-- CODE:
nota1=(0.0)*1
nota2=(0.0)*2
nota3=(9.0)*3
nota4=(10.0)*4
print((nota1+nota2+nota3+nota4)//10)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:17:51) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print((nota1+nota2+nota3+nota4)//10)
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:17:54) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print((nota1+nota2+nota3+nota4)//10)
-- EXECUTION TIME:
0.219811
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
3.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:18:03) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print((nota1+nota2+nota3+nota4)/10)
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:18:04) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print((nota1+nota2+nota3+nota4)/10)
-- EXECUTION TIME:
0.185414
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
3.25
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.9590000000000005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:18:35) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print(round(nota1+nota2+nota3+nota4)/10,2)
-- OUTPUT:
3.2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:18:37) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print(round(nota1+nota2+nota3+nota4)/10,2)
-- EXECUTION TIME:
0.191775
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
3.2 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.8 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:18:38) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
print(round(nota1+nota2+nota3+nota4)/10,2)
-- EXECUTION TIME:
0.136722
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
3.2 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.8 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:22:07) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
total=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4))/10
print(round(total,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:22:09) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
total=((nota1*1)+(nota2*2)+(nota3*3)+(nota4*4))/10
print(round(total,2))
-- EXECUTION TIME:
0.152871
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
